--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nono",
+  "name": "refuerzo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,7 +27,7 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op mini all"
     ],
     "development": [
       "last 1 chrome version",
